feat: tela de cadastro de projeto/tarefa

--- a/src/main/Front/html/login.html
+++ b/src/main/Front/html/login.html
@@ -14,7 +14,7 @@
         <button onclick="login()">Entrar</button>
         <button onclick="cancelar()">Cancelar</button>
     </div>
-    <p>Não tem conta? <a href="cadastro.html">Cadastre-se aqui</a></p>
+    <p>Não tem conta? <a href="cadUsuario.html">Cadastre-se aqui</a></p>
 </div>
 
     <script src="../js/login.js"></script>
