--- a/src/main/Front/html/telaInicial.html
+++ b/src/main/Front/html/telaInicial.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <title>TasksDoErickin</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-<header>
-    <h1>TasksDoErickin</h1>
-</header>
 
-<main>
-    <section>
-        <h2>Projetos</h2>
-        <ul id="projetos-list"></ul>
-    </section>
+    <header>
+        <h1>TasksDoErickin</h1>
 
-    <section>
-        <h2>Tarefas</h2>
-        <ul id="tarefas-list"></ul>
-    </section>
-</main>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home">Início</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
 
-<script src="../js/script.js"></script>
+    </header>
+
+    <main style="padding-top: 80px;">
+        <section>
+            <h2>Projetos</h2>
+            <ul id="projetos-list"></ul>
+        </section>
+
+    </main>
+
+    <script src="../js/script.js"></script>
 </body>
-</html>
 
+</html>
