--- a/src/main/Front/html/telaInicial.html
+++ b/src/main/Front/html/telaInicial.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TasksDoErickin</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/telaInicial.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 
     </main>
 
-    <script src="../js/script.js"></script>
+    <script src="../js/telaInicial.js"></script>
 </body>
 
 </html>
