style: arrumei as cores e botões

--- a/src/main/Front/html/cadProjetos.html
+++ b/src/main/Front/html/cadProjetos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../css/cadProjetos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
 
