--- a/src/main/Front/html/telaInicial.html
+++ b/src/main/Front/html/telaInicial.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>TasksDoErickin</title>
     <link rel="stylesheet" href="../css/telaInicial.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
